<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Journalio</string>
    <string name="sign_up_bttn">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="image">Image</string>
    <string name="get_your_account_for_more_features">Get your account for more features</string>
    <string name="trending">Trending</string>
    <string name="my_posts">My Posts</string>
    <string name="my_profile">My Profile</string>
    <string name="dummy_headline">New Story Heading</string>
    <string name="dummy_story_detail">ahofoqejoqijerqierjo jroqiejroiqejrpoiqjerpi qjeprihqpeirhqpeiurhpqoierhpoq ijerpoqijerpio qjpeorijqpoeirjpoq eij</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_activity__profile">Activity_Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_Email">E-mail</string>
    <string name="profile_password">Password</string>
    <string name="firstname_and_Lastname">Firstname and Lastname</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

</resources>
