<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <include
        android:id="@+id/app_header_id"
        layout="@layout/app_header"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/firstname_and_Lastname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_profile_page_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/profile_Email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_profile_page_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_profile_page_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:hint="@string/profile_password"
        android:ems="10"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/iv_profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_header_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:src="@drawable/ic_profile_icon" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_profile_page_password"
        android:layout_marginTop="24dp"
        android:background="#0fbb2e"
        android:text="@string/sign_up"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/log_in" />
        
    </RelativeLayout>
    

